      [Contributed by Konstantin]

    Bug fixes:
    - Fixed a bug in FindJemalloc.cmake where paths were not being handled
      correctly.
    - Fixed a Windows build issue in openvdb_render.
    - Fixed a non deterministic threading bug in tools::meshToVolume() during
      polygon voxelization which could result in different distance values.

    ABI changes:
    - OpFactory destructor is now virtual as of ABI=7
    - Added new virtual methods for copying const grids and replacing
      the metadata and/or the transform - GridBase::copyGridReplacingMetadata,
      GridBase::copyGridReplacingTransform and
      GridBase::copyGridReplacingMetadataAndTransform.
    - AttributeArray copy constructor is now thread-safe.

    API changes:
    - VolumeToMesh::pointList() and VolumeToMesh::polygonPoolList() now return
      a std::unique_ptr instead of a boost::scoped_array.
    - AttributeArray::copyUncompressed() is now deprecated.

    Python:
    - Removed the requirement of CMake 3.14 for NumPy usage.
    - Added support for Boost versions 1.65 and later when building
      the Python module with NumPy support through CMake.
    - Improved CMake Python3 support.
    - The Python Module is now disabled by default in CMake.

    Houdini:
    - Fixed a bug in the Points Convert SOP during conversion from
      Houdini geometry to OpenVDB Points, where point group information
      could end up corrupted or cause a crash with non-contiguous
      point offsets (mesh inputs).
    - Threaded the population of point group memberships during conversion
      from Houdini geometry to OpenVDB Points
    - Added logic to the Rasterize Points SOP to suppress the output of
      non-finite attribute values due to subnormal input densities.
    - Introduced a position compression option to the Scatter SOP for VDB
      Points and default to 16-bit fixed point.


Version 6.2.1 - September 30, 2019

    Bug fixes: