@@ -267,14 +267,24 @@ private:
 
 namespace local_util {
 
-/// @brief Decompose an affine transform into scale, rotation and translation components.
-/// @return @c false if the given matrix is not affine or cannot otherwise be decomposed.
+enum { DECOMP_INVALID = 0, DECOMP_VALID = 1, DECOMP_UNIQUE = 2 };
+
+/// @brief Decompose an affine transform into scale, rotation (XYZ order),
+/// and translation components.
+/// @return DECOMP_INVALID if the given matrix is not affine or cannot
+/// be decomposed, DECOMP_UNIQUE if the matrix has a unique decomposition,
+/// DECOMP_VALID otherwise
 template<typename T>
-inline bool
+inline int
 decompose(const math::Mat4<T>& m, math::Vec3<T>& scale,
     math::Vec3<T>& rotate, math::Vec3<T>& translate)
 {
-    if (!math::isAffine(m)) return false;
+    if (!math::isAffine(m)) return DECOMP_INVALID;
+
+    const auto posAngle = [](T angle) {
+        while (angle < T(0)) { angle += M_PI * 2.0; }
+        return angle;
+    };
 
     // This is the translation in world space
     translate = m.getTranslation();
@@ -293,11 +303,9 @@ decompose(const math::Mat4<T>& m, math::Vec3<T>& scale,
 
     T minAngle = std::numeric_limits<T>::max();
 
-    // If the transformation matrix contains a reflection,
-    // test different negative scales to find a decomposition
-    // that favors the optimal resampling algorithm.
+    // If the transformation matrix contains a reflection, test different negative scales
+    // to find a decomposition that favors the optimal resampling algorithm.
     for (size_t n = 0; n < 8; ++n) {
-
         const math::Vec3<T> signedScale(
             n & 0x1 ? -unsignedScale.x() : unsignedScale.x(),
             n & 0x2 ? -unsignedScale.y() : unsignedScale.y(),
@@ -310,15 +318,14 @@ decompose(const math::Mat4<T>& m, math::Vec3<T>& scale,
         const math::Vec3<T> tmpAngle = math::eulerAngles(mat, math::XYZ_ROTATION);
 
         const math::Mat3<T> rebuild =
-            math::rotation<math::Mat3<T> >(math::Vec3<T>(1, 0, 0), tmpAngle.x()) *
-            math::rotation<math::Mat3<T> >(math::Vec3<T>(0, 1, 0), tmpAngle.y()) *
             math::rotation<math::Mat3<T> >(math::Vec3<T>(0, 0, 1), tmpAngle.z()) *
+            math::rotation<math::Mat3<T> >(math::Vec3<T>(0, 1, 0), tmpAngle.y()) *
+            math::rotation<math::Mat3<T> >(math::Vec3<T>(1, 0, 0), tmpAngle.x()) *
             math::scale<math::Mat3<T> >(signedScale);
 
         if (xform.eq(rebuild)) {
-
-            const T maxAngle = std::max(std::abs(tmpAngle[0]),
-                std::max(std::abs(tmpAngle[1]), std::abs(tmpAngle[2])));
+            const T maxAngle = math::Max(
+                posAngle(tmpAngle[0]), posAngle(tmpAngle[1]), posAngle(tmpAngle[2]));
 
             if (!(minAngle < maxAngle)) { // Update if less or equal.
 
@@ -337,13 +344,15 @@ decompose(const math::Mat4<T>& m, math::Vec3<T>& scale,
         }
     }
 
-    if (!validDecomposition || (hasRotation && !hasUniformScale)) {
+    if (!validDecomposition) {
         // The decomposition is invalid if the transformation matrix contains shear.
-        // No unique decomposition if scale is nonuniform and rotation is nonzero.
-        return false;
+        return DECOMP_INVALID;
     }
-
-    return true;
+    if (hasRotation && !hasUniformScale) {
+        // No unique decomposition if scale is nonuniform and rotation is nonzero.
+        return DECOMP_VALID;
+    }
+    return DECOMP_UNIQUE;
 }
 
 } // namespace local_util
